--- a/src/components/pages/ItemListContainer/ItemListContainer.css
+++ b/src/components/pages/ItemListContainer/ItemListContainer.css
@@ -1,8 +1,18 @@
-h2 {
-  text-align: center;
-}
-.item-products {
-  justify-content: center;
-  display: flex;
-  gap: 50px;
+#main {
+  .item-list-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    .loading-spinner {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+    }
+    .item-products {
+      justify-content: center;
+      display: flex;
+      gap: 50px;
+    }
+  }
 }
