--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,23 @@ body {
   height: 100%;
 }
 
-#main {
+main {
   min-height: 100vh;
+}
+
+.navbar-footer ul li a,
+nav a {
+  text-decoration: none;
+  color: black;
+  &:hover {
+    text-decoration: underline;
+  }
+}
+
+.active {
+  border: solid 3px black;
+  padding: 4px;
+  color: blue;
+  font-weight: bold;
+  border-radius: 100px;
 }
