--- a/src/components/layouts/Navbar/navbar.css
+++ b/src/components/layouts/Navbar/navbar.css
@@ -36,6 +36,7 @@ h1 a {
 .navbar ul {
   list-style: none;
   display: flex;
+  align-items: center;
   gap: 20px;
 }
 
@@ -43,6 +44,47 @@ h1 a {
   font-size: 30px;
   cursor: pointer;
   display: none;
+}
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+  top: -4px;
+}
+
+.dropdown-icon {
+  position: relative;
+  top: 8px;
+}
+
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+  top: 33px;
+}
+
+/* Links inside the dropdown */
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  font-weight: 400;
+}
+
+/* Change color of dropdown links on hover */
+.dropdown-content a:hover {
+  background-color: #f1f1f1e4;
+}
+
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content {
+  display: block;
 }
 
 @media (max-width: 768px) {
