--- a/src/components/pages/contacto/contacto.css
+++ b/src/components/pages/contacto/contacto.css
@@ -2,21 +2,21 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding-top: 100px;
 }
 
 .widgets-form {
   display: flex;
   width: 100%;
-  justify-content: space-between;
-  padding: 0px 200px 0px 200px;
+  justify-content: center;
+  gap: 500px;
+  padding-top: 100px;
 }
 
 ul li {
   list-style: none;
 
-  .instagramWidget-contacto,
-  .wppWidget-contacto,
-  .tiktokWidget-contacto {
+  .widgets-style {
     display: flex;
     align-items: center;
     gap: 5px;
@@ -31,5 +31,62 @@ ul li {
         text-decoration: underline;
       }
     }
+  }
+}
+
+.formulario-container {
+  width: 25%;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+}
+
+.label-input {
+  display: flex;
+  flex-direction: column;
+}
+
+.label-input label {
+  font-size: 1rem;
+  font-weight: bold;
+  color: #333;
+}
+
+.label-input input {
+  padding: 10px;
+  margin-top: 10px;
+  font-size: 16px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  outline: none;
+  transition: 0.3s ease-in-out;
+  width: 100%;
+}
+
+.label-input input:focus {
+  border-color: #007bff;
+  box-shadow: 0 0 5px rgba(0, 123, 255, 0.3);
+}
+
+.btn-container {
+  padding: 0px 150px 0px 150px;
+  button {
+    width: 100%;
+    padding: 12px;
+    font-size: 16px;
+    font-weight: bold;
+    color: #fff;
+    background: #007bff;
+    border: none;
+    border-radius: 8px;
+    cursor: pointer;
+    transition: 0.3s ease-in-out;
+  }
+
+  button:hover {
+    background: #0056b3;
   }
 }
