--- a/src/components/common/productCard/productCard.css
+++ b/src/components/common/productCard/productCard.css
@@ -42,6 +42,11 @@
       padding: 5px;
       font-size: 1.1rem;
       border-radius: 5px;
+      transition: 0.4s;
+      border: none;
+      &:hover {
+        box-shadow: inset 10em 0 0 0 rgba(255, 255, 255, 0.392);
+      }
       a {
         color: white;
         text-decoration: none;
