--- a/src/components/pages/productDetail/productDetail.css
+++ b/src/components/pages/productDetail/productDetail.css
@@ -25,14 +25,23 @@
     margin-top: 10px;
     font-size: 1.5rem;
   }
+
   button {
     margin-top: 50px;
     background-color: black;
+    border: none;
     width: 170px;
     font-weight: bold;
     padding: 5px;
     font-size: 1.1rem;
     border-radius: 5px;
     color: white;
+    cursor: pointer;
+    transition: 0.4s;
+
+    &:hover,
+    &:focus {
+      box-shadow: inset 10em 0 0 0 rgba(255, 255, 255, 0.392);
+    }
   }
 }
