--- a/src/components/common/counter/counter.css
+++ b/src/components/common/counter/counter.css
@@ -1,28 +1,24 @@
-.counter-btns {
-  display: flex;
-  align-items: center;
-  gap: 15px;
-}
-
-.counter-btns button {
-  background-color: #bbbbbb;
-  border: none;
-  padding: 8px;
-  cursor: pointer;
-  font-size: 20px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 50px;
-  border-radius: 50px;
-
-  &:hover {
-    background-color: #bbbbbbd3;
+.counter {
+  .counter-btns {
+    display: flex;
+    align-items: end;
+    gap: 15px;
   }
-}
 
-.counter-btns h4 {
-  position: relative;
-  top: 20px;
-  font-size: 1.5rem;
+  .counter-btns button {
+    background-color: #bbbbbb;
+    border: none;
+    padding: 8px;
+    cursor: pointer;
+    font-size: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 50px;
+    border-radius: 50px;
+
+    &:hover {
+      background-color: #bbbbbbd3;
+    }
+  }
 }
