--- a/src/components/common/productCard/productCard.css
+++ b/src/components/common/productCard/productCard.css
@@ -2,7 +2,7 @@
   width: 250px;
   height: 400px;
   border: 1px solid;
-
+  background-color: #ffff;
   .product-img {
     img {
       width: 100%;
