--- a/src/components/pages/checkout/checkout.css
+++ b/src/components/pages/checkout/checkout.css
@@ -8,3 +8,49 @@
   display: flex;
   flex-direction: column;
 }
+
+.submit-order {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  gap: 20px;
+
+  h1 {
+    font-size: 2rem;
+  }
+  button {
+    background-color: black;
+    width: 170px;
+    font-weight: bold;
+    padding: 5px;
+    font-size: 1rem;
+    border-radius: 5px;
+    border: none;
+    cursor: pointer;
+    animation: shake 4s infinite;
+    transition: 0.4s;
+
+    &:hover,
+    &:focus {
+      box-shadow: inset 12em 0 0 0 rgba(255, 255, 255, 0.392);
+    }
+    a {
+      display: inline-block;
+      color: white;
+      text-decoration: none;
+      width: 100%;
+      &:hover {
+        text-decoration: underline;
+      }
+    }
+  }
+}
+
+.id-compra {
+  span {
+    margin-left: 5px;
+    font-weight: bold;
+  }
+}
