--- a/src/components/pages/cart/cart.css
+++ b/src/components/pages/cart/cart.css
@@ -23,6 +23,10 @@
   width: 80px;
   height: 80px;
   object-fit: cover;
+  transition: transform 0.3s ease-in-out;
+  &:hover {
+    transform: scale(1.5);
+  }
 }
 
 .cart-productCard h3 {
@@ -95,6 +99,8 @@
 
   button {
     background-color: black;
+    display: flex;
+    justify-content: center;
     width: 170px;
     font-weight: bold;
     padding: 5px;
